Reverse select/unselect colors, resolves #32
So easy I can do it… Also removed the random “????” from the default
view of description panel

--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ button.disabled:hover {
 }
 
 button.selected {
-    background: #e5e5e5 !important;
+    background: #bdbdbd !important;
     /*
     pointer-events: none;
     cursor: not-allowed;
@@ -160,7 +160,7 @@ button.selected {
 }
 
 .filter-row button {
-    background: #bdbdbd;
+    background: #e5e5e5;
     line-height: 40px;
     padding: 0 6px;
     font-size: 0.65em;
