--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,9 @@ body,
 .panel.filters {
     bottom: 1.5%;
     left: 1.2em;
+    background: rgba(255,255,255,0.8);
+    padding: 10px;
+    border-radius: 10px;
 }
 
 
@@ -148,6 +151,10 @@ button.about:hover {
 /* filters */
 .filters p.txt-copy {
     margin: 0 0 10px 3px;
+}
+.panel-headline {
+    font-weight: 700;
+    text-transform: uppercase;
 }
 .filter-row {
     margin-bottom: 5px;
