--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,6 @@ button, .tabs {
 
 
 /* base styles */
-
 button.link {
     font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
     background: none;
@@ -202,6 +201,15 @@ button.about:hover {
     background: #e5e5e5;
 }
 
+#resetButton {
+    float: right;
+    display: none;
+}
+
+.selected #resetButton {
+    display: block;
+}
+
 /* tabs */
 .tabs {
     position: relative;
@@ -306,7 +314,7 @@ button.about:hover {
     position: relative;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.4);
+    background: rgba(255, 255, 255, 0.65);
     z-index: 0;
 }
 .modal-inner {
@@ -320,6 +328,9 @@ button.about:hover {
     background: #fff;
     overflow: auto;
     z-index: 1;
+    -webkit-box-shadow: 2px 2px 10px 1px rgba(0,0,0,0.35);
+    -moz-box-shadow: 2px 2px 10px 1px rgba(0,0,0,0.35);
+    box-shadow: 2px 2px 10px 1px rgba(0,0,0,0.35);
 }
 .modal-content {
     margin: 10px;
@@ -327,7 +338,19 @@ button.about:hover {
 .modal-close {
     position: absolute;
     top: 0;
-    right: 5px;
+    right: 10px;
+    font-size: 1.5em;
+    line-height: 1;
+}
+
+.icon-close {
+    line-height: 1;
+    background: #eee;
+    border-radius: 50%;
+    padding: 4px 5px 4px 7px;
+    font-size: 10px;
+    text-align: center;
+    position: relative;
 }
 
 /* horizontal-list */
