--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,9 @@ body,
     padding:0;
     position: relative;
 }
+.container * {
+    box-sizing: border-box;
+}
 
 .nav {
     padding: 0.5em 1.875em;
@@ -31,6 +34,15 @@ body,
     width: 29%;
     text-align: right;
 }
+
+#embedded .nav {
+    padding: 0.5em 0.55em;
+}
+#embedded .nav div {
+    width: 100% !important;
+    text-align: left;
+}
+
 
 #map {
     position:relative;
@@ -147,6 +159,17 @@ button.about:hover {
 .nav div:last-child span{
     margin: 0 5px;
 }
+
+#embedded .nav h1 a {
+    text-decoration: none;
+    color: #000;
+
+}
+#embedded .nav h1 a:hover {
+    text-decoration: none;
+    color: #333;
+}
+
 
 /* filters */
 .filters p.txt-copy {
@@ -344,12 +367,34 @@ button.about:hover {
 .modal-content {
     margin: 10px;
 }
+.modal-row {position: relative;}
+
+.modal p.close {
+    text-align: center;
+}
+
+.modal .tip {
+    line-height: 1.25;
+    background: #F6EDA8;
+    padding: 10px;
+    margin-top: -5px;
+}
+.modal .instructional-step {
+    font-weight: bold;
+    margin-bottom: 1px;
+}
+
 .modal-close {
     position: absolute;
     top: 0;
     right: 10px;
     font-size: 1.5em;
     line-height: 1;
+}
+.modal-close.inline {
+    position: relative;
+    right: auto;
+    top: auto;
 }
 
 .icon-close {
@@ -502,10 +547,52 @@ ul.plain li {
     font-size: 1em;
 }
 
-#embed {
-
+body.show-embed #embed {
+    display: block !important;
 }
 
+.mouse-blocker {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0);
+    opacity: 0;
+}
+#embed-iframe {
+    width: 100%;
+    height: 300px;
+    max-height: 300px;
+    overflow: hidden;
+
+}
+#embed-iframe iframe {
+    width: 100%;
+    height: 300px;
+    border: 1px solid #ccc;
+    overflow: hidden;
+}
+
+#embed textarea {
+    height: 80px;
+    padding: 5px;
+    border: 1px solid #aaa;
+    line-height: 1.25;
+    color: #555;
+    font-family: sans-serif;
+    font-weight: normal;
+    font-size: 0.85em;
+    overflow: auto;
+    resize: none;
+    outline: none;
+    width: 100%;
+}
+
+#embed p.close .modal-close {
+    font-size: 1.25em;
+    font-weight: 700;
+}
 
 
 /* icons */
@@ -532,6 +619,12 @@ ul.plain li {
 .hide {
     display: none;
 }
+
+
+#embedded {
+
+}
+
 
 
 
