--- a/css/main.css
+++ b/css/main.css
@@ -248,7 +248,10 @@ button.selected {
     position: relative;
     display: none;
     width: 100%;
-    max-width: 300px;
+    max-width: 400px;
+
+    white-space: normal;
+    word-wrap: break-word;
 }
 .tabs.open {
     display: block;
