--- a/css/main.css
+++ b/css/main.css
@@ -333,6 +333,7 @@ button.selected {
 .tab .value {
     display: inline-block;
     font-weight: 300;
+    line-height: 1.5;
     margin-left: 5px;
     *zoom: 1;
 }
