--- a/css/main.css
+++ b/css/main.css
@@ -516,6 +516,22 @@ ul.plain li {
 .dropdown input[type="checkbox"] {
     margin-right: 5px;
     cursor: auto;
+}
+.checkbox-item {
+    position: relative;
+}
+.checkbox-item.disabled:after {
+    content: ' ';
+    position: absolute;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    opacity: 0.4;
+    z-index: 1;
+}
+.checkbox-item.disabled:after {
+    display: block;
 
 }
 
