Moved selected region to top, #42
Switched proj4 min js file with uncompressed version
Removed null crs resolution with actual value

--- a/css/main.css
+++ b/css/main.css
@@ -754,3 +754,9 @@ body.show-embed #embed {
 .moore-map-labels {
     z-index: 2;
 }
+
+.my-div-icon {
+    width: 20px;
+    height: 20px;
+    background: red;
+}
