--- a/css/main.css
+++ b/css/main.css
@@ -480,21 +480,23 @@ ul.plain li {
     font-size: 0.75em;
     font-weight: bold;
     text-align: left;
-    padding: 0 0.5em;
+    padding: 0 0 0 0.5em;
 }
 .dropdown li button:after {
-    content: "⟩";
+    content: " ";
     position: relative;
     float: right;
+    background-image: url('../assets/icons/right-chevron.svg');
+    background-size: 18px 18px;
+    height: 18px;
+    width: 18px;
 }
 
 .dropdown .open > button {
     background: #eee;
 }
 .dropdown .open > button:after {
-    -webkit-transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-            transform: rotate(90deg);
+    background-image: url('../assets/icons/down-chevron.svg');
 }
 
 .dropdown li li {
@@ -540,6 +542,7 @@ ul.plain li {
     display: block;
 
 }
+
 .checkbox-toggler {
     font-size: 12px;
     color: #666;
