--- a/css/main.css
+++ b/css/main.css
@@ -851,3 +851,87 @@ body.show-embed #embed {
 .leaflet-rrose-content {
     font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+#legend {
+    position: absolute;
+    z-index: 9999;
+    bottom: 20px;
+    left: 1em;
+    background: #f4f4f4;
+    border: 2px solid #e2ebee;
+    border-radius: 6px;
+}
+
+#legend ul {
+    margin: 8px 20px;
+    padding: 0;
+}
+
+#legend li {
+    display: inline-block;
+    font-size: 12px;
+    margin-right: 15px;
+    *zoom: 1;
+}
+#legend li:last-child {
+    margin-right: 0;
+}
+#legend li span {
+    display: inline-block;
+    vertical-align: middle;
+    *zoom: 1;
+}
+
+#legend li .icon {
+    background: transparent url('../assets/icons/icons-legend.png') 0 0 no-repeat;
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (min--moz-device-pixel-ratio: 1.5),
+only screen and (-o-min-device-pixel-ratio: 1.5 / 1),
+only screen and (min-resolution: 144dpi),
+only screen and (min-resolution: 1.5dppx) {
+    #legend li .icon {
+        background-image: url('../assets/icons/icons-legend@2x.png');
+        background-size: 134px 26px;
+    }
+
+}
+
+
+#legend li:first-child .icon {
+    width: 23px;
+    height: 23px;
+    background-position: -1px -1px;
+}
+
+#legend li:nth-child(2) .icon {
+    background-position: -28px -3px;
+}
+
+#legend li:nth-child(3) .icon {
+    background-position: -50px -3px;
+}
+
+#legend li:nth-child(4) .icon {
+    background-position: -72px -3px;
+}
+
+#legend li:nth-child(5) .icon {
+    background-position: -94px -3px;
+}
+
+#legend li:nth-child(6) .icon {
+    width: 16px;
+    height: 16px;
+    background-position: -118px -5px;
+}
+
+#legend img {
+    width: 790px;
+    height: 48px;
+    border: 0;
+}
